--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,22 +1,19 @@
 name: CI
-on:
-  pull_request:
+"on":
+  pull_request: null
   push:
     branches:
       - master
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Begin CI...
         uses: actions/checkout@v2
-
       - name: Use Node 12
         uses: actions/setup-node@v1
         with:
-          node-version: 12.x
-
+          node-version: lts/*
       - name: Use cached node_modules
         uses: actions/cache@v1
         with:
@@ -24,27 +21,22 @@ jobs:
           key: nodeModules-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             nodeModules-
-
       - name: Install dependencies
         run: npm ci
         env:
           CI: true
-
       - name: Lint
         run: npm run lint
         env:
           CI: true
-
       - name: Test
         run: npm test -- --coverage
         env:
           CI: true
-
       - name: Build
         run: npm run build
         env:
           CI: true
-
       - name: Codecov
         run: npx codecov
         env:
